# cpp_iterator

./: CMakeLists.txt  CMakePresets.json  cspell.json
src/: cpp_iterator.h  cpp_variant.h
src/test/: CMakeLists.txt  cpp_iterator_test.cc
